Fixed white space

--- a/src/base/_base.scss
+++ b/src/base/_base.scss
@@ -30,10 +30,11 @@ HTML & BODY
 
 html,
 body {
-	margin: 0;
-	padding: 0;
-	height: 100%;
 	width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
